--- a/Default_HomePage_MEOWFI_V0_01.htm
+++ b/Default_HomePage_MEOWFI_V0_01.htm
@@ -122,7 +122,7 @@
   <div class="bonding">Bonding Curve Status: Coming soon 📈</div>
 
   <p class="footer">
-    <a href="https://github.com/deinuser/meowfi-whitepaper" target="_blank">📄 Whitepaper</a><br>
+    <a href="https://github.com/SIntegration/MeowFI?tab=readme-ov-file#-meowfi--the-cats-outta-the-bag-on-the-solana-blockchain" target="_blank">📄 Whitepaper</a><br>
     Disclaimer: This is a meme coin for entertainment purposes only. No financial advice. No promises. Pure chaos.
   </p>
 
